<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="16dp"
    android:layout_marginVertical="8dp"
    app:strokeWidth="1dp"
    app:strokeColor="@color/primary_swift"
    app:cardCornerRadius="10dp"
    app:cardElevation="4dp">

    <RelativeLayout
        android:background="@color/v2_primary_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="12dp">

        <LinearLayout
            android:id="@+id/ll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/owner_"
                android:textColor="@color/primary_swift"
                android:textStyle="bold"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/ownerName"
                android:layout_marginStart="6dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text=""
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll2"
            android:layout_marginVertical="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textColor="@color/primary_swift"
                android:textStyle="bold"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/repo_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/repository_name"
                android:textColor="@color/white"
                android:textSize="18sp"
                 />


        </LinearLayout>

        <TextView
            android:id="@+id/repo_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll2"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="4dp"
            android:layout_toStartOf="@+id/share_btn"
            android:maxLines="2"
            android:text="Description of repository in 2 lines maximum"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/share_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="4dp"
            android:contentDescription="Share the repo"
            android:src="@drawable/baseline_share_24" />


    </RelativeLayout>


</com.google.android.material.card.MaterialCardView>