<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/v2_primary_bg"
    android:orientation="vertical"
    tools:context=".ui.AddFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/material_app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:navigationIcon="@drawable/ic_arrow_left_v2"
        android:background="@drawable/app_bar_drawable"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        app:title="Add your Favourite Repo"
        app:titleTextColor="@color/white"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/owner_edit_text"
        style="@style/EditTextStyleTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="40dp"
        android:layout_marginVertical="16dp"
        android:background="@color/transparent"
        android:elevation="22dp"
        android:gravity="center"
        android:hint="@string/owner"
        app:helperTextEnabled="true"
        android:textColorHint="@color/white"
        app:boxBackgroundColor="#2e3239"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:boxStrokeColor="@color/primary_swift"
        app:helperText="Enter the Repository owner name"
        app:helperTextTextColor="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:drawablePadding="16dp"
            android:elevation="20dp"
            android:fontFamily="@font/montserrat"
            android:imeOptions="actionNext"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/repo_edit_text"
        style="@style/EditTextStyleTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="40dp"
        android:layout_marginVertical="16dp"
        android:background="@color/transparent"
        android:elevation="22dp"
        android:gravity="center"
        android:hint="@string/Repositoryname"
        app:helperTextEnabled="true"
        android:textColorHint="@color/white"
        app:boxBackgroundColor="#2e3239"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:boxStrokeColor="@color/primary_swift"
        app:helperText="Enter the Repository name"
        app:helperTextTextColor="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:drawablePadding="16dp"
            android:elevation="20dp"
            android:fontFamily="@font/montserrat"
            android:imeOptions="actionNext"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:backgroundTint="@color/yellow_button_color"
        android:layout_marginVertical="24dp"
        android:id="@+id/addBtn"
        android:text="@string/continuee"
        android:textColor="@color/black"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textSize="16sp"
        android:letterSpacing="0.02"/>



</LinearLayout>